#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-06
2013-02-26 Andy Salnikov
- few fixes to make it work better with HDF5 generator

Tag: V00-04-05
2013-02-12 Andy Salnikov
- removed shape method for pvName

Tag: V00-04-04
2013-02-06 Andy Salnikov
- in pnccd moved FramesV1 below FulFrameV1. Python bindings use this
  order to find data in event for given type_id, because those classes
  have the same type_id FramesV1 was found first. Preferred for Python is 
  to return FullFrame so it has to come first.

Tag: V00-04-03
2013-02-05 Andy Salnikov
- update usdusb.DataV1 definition

Tag: V00-04-02
2013-02-05 Andy Salnikov
- upgrading to pdsdata V06-01-04
- new classes princeton.ConfigV5, princeton.FrameV2

Tag: V00-04-01
2013-02-04 Andy Salnikov
- upgrading to pdsdata V06-01-02
- new classes cspad2x2.ConfigV2 and cspad2x2.ConfigV2QuadReg
- method ipimb.ConfigV{1,2}.diodeGain() renamed to capacitorValue()

Tag: V00-04-00
2013-01-30 Andy Salnikov
- switching to const ndarrays everywhere

Tag: V00-03-16
2013-01-28 Andy Salnikov
- updates related to ndarray constness change

Tag: V00-03-15
2013-01-02 Andy Salnikov
- upgrading to pdsdata V05-03-00
- new classes orca.ConfigV1 and timepix.ConfigV3
- bld.BldDataAcqADCV1 not implemented yet

Tag: V00-03-14
2012-12-12 Andy Salnikov
- replace tabs with spaces in XML to get consistent indentation
- implementation of encoder.DataV*.value changed to forward to method 
  instead of data member

Tag: V00-03-13
2012-11-15 Andy Salnikov
- upgrading to pdsdata V05-01-00
- new class bld/BldDataGMDV1

Tag: V00-03-12
2012-11-08 Andy Salnikov
- upgrading to pdsdata V04-05-00
- new class princeton/ConfigV4