@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-07
+2013-02-26 Andy Salnikov
+- couple of classes in cspad and cspad2x2 packages made value-type
+- Evr.PulseConfig auto constuctor replaced with specific arguments
+  to take parameters retuurned from non-accessor methods
+
 Tag: V00-04-06
 2013-02-26 Andy Salnikov
 - few fixes to make it work better with HDF5 generator
